# chessticize-mobile

./: .gitattributes  .gitignore  AGENTS.md  CONTEXT-MAP.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.codex/skills/chessticize-android-release/: SKILL.md
.codex/skills/chessticize-issue-triage/: SKILL.md
.codex/skills/chessticize-mobile-dev-loop/: SKILL.md
.codex/skills/chessticize-mobile-local-e2e/: SKILL.md
.codex/skills/chessticize-mobile-ui-calibration/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: core.yml  mobile-android-github-release.yml  mobile-android-release-candidate.yml  mobile-android-source-recovery.yml  mobile-android.yml  mobile-ios.yml  mobile-js.yml  mobile-lab.yml  process.yml
apps/cli/src/: main.ts
apps/cli/test/: app-store-preflight.test.ts  app-store-release-manifest.test.ts  (+6 more)
apps/mobile/: .detoxrc.js  .eslintrc.js  .gitignore  App.tsx  CONTEXT.md  ChessticizeStockfish.podspec  README.md  app.json  jest.config.js  jest.env.js  jest.setup.js  metro.config.js  package.json  release-version.json  stockfish-artifacts.json  tsconfig.json
apps/mobile-lab/: README.md  package.json  tsconfig.json
apps/mobile/android/app/src/main/cpp/: CMakeLists.txt  NativeStockfishEngine.cpp
apps/mobile/android/app/src/main/cpp/stockfish/: NativeStockfishEngine.cpp
docs/: ANDROID_GITHUB_RELEASE.md  ANDROID_IOS_RELEASE_BUILD_TIME_RESEARCH.md  ANDROID_PLAY_LISTING.md  ANDROID_PLAY_RELEASE.md  ANDROID_PRIVACY_DISCLOSURE.md  ANDROID_VALIDATION.md  APP_PRIVACY_DISCLOSURE.md  APP_STORE_PLAN.md  APP_STORE_UPLOAD.md  CORE_CLI.md  DEVICE_TARGETS.md  ISSUE_247_MOVE_FEEDBACK_RESEARCH.md  PHASED_EXECUTION_PLAN.md  PRIVACY_POLICY.md  PUZZLE_PACK_SAMPLING.md  RELEASE_NOTES.md  RELEASE_SOURCE_POLICY.md  STORE_ASSETS.md  TESTFLIGHT_QA.md  TESTING_ARCHITECTURE.md  android-play-owner-evidence.example.json
docs/adr/: 0001-order-review-schedule-changes-by-event-time.md  0002-enroll-review-and-clear-unclear-atomically.md
docs/agents/: domain.md  issue-tracker.md  issue-triage.md  triage-labels.md  ui-flow-design.md
docs/releases/: RELEASE_NOTES_TEMPLATE.md  android-v1.2.0-build-5.md  android-v1.2.0-build-6.md  ios-v1.2.0-build-1.md
docs/ui-design/: DESIGN_PARITY_BACKLOG.md  HISTORY_QUICK_FILTER_RESEARCH.md  MOBILE_UI_DESIGN.md  V1_IMPLEMENTATION_GUIDE.md
fixtures/puzzles/: README.md  android-arrow-duel.fixture.json  android-standard-practice.fixture.json  bundled-core-pack.json  bundled-core-pack.manifest.json  bundled-core-pack.sqlite  familiar-15-e2e.manifest.json  presolved-1000.json  presolved-sample.json  regression-samples.json
patches/: detox@20.51.4.patch  react-native-chessboard@0.2.0.patch  react-native@0.86.0.patch
scripts/: app-store-preflight.mjs  app-store-release-manifest.mjs  app-store-screenshot-audit.mjs  app-store-signing-readiness.mjs  app-store-testflight-evidence.mjs  app-store-third-party-audit.mjs  benchmark-multi-theme-query.mjs  fetch-core-pack.mjs  generate-detox-puzzle-pack.mjs  generate-offline-puzzle-fixture.mjs  ios-release-version.test.mjs  mobile-data-egress-audit.mjs  mobile-data-egress-audit.test.mjs  update-offline-puzzle-pack-presolve.mjs  validate-development-process.mjs
scripts/lib/: ios-release-identity.mjs  ios-release-version.cjs  mobile-data-egress-audit.mjs  stockfish-artifacts.mjs
sites/storybook-previews/: .gitignore  package-lock.json  package.json  preview-manifest.json
types/: node-sqlite.d.ts
(+294 files in other folders)
